--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
-    "satellizer": "^0.14.0"
+    "satellizer": "^0.14.0",
+    "toastr": "^2.1.2"
   }
 }
